# drogue-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: context.rs  error.rs  lib.rs  metrics.rs  serde.rs  translator.rs
src/admin/: mod.rs
src/admin/v1/: client.rs  data.rs
src/command/: mod.rs
src/command/v1/: client.rs  mod.rs
src/core/: client.rs  mod.rs
src/core/client/: impl.rs  mod.rs
src/core/v1/: mod.rs
src/discovery/: mod.rs
src/discovery/v1/: client.rs  data.rs  mod.rs
src/integration/: mod.rs
src/integration/ws/: mod.rs  v1.rs
src/meta/: mod.rs
src/meta/v1/: mod.rs
src/metrics/: ext.rs  mod.rs
src/openid/: inject.rs  mod.rs  provider.rs
src/openid/provider/: access_token.rs  api_key.rs  mod.rs  openid.rs
src/registry/: mod.rs
src/registry/v1/: client.rs  mod.rs
src/registry/v1/data/: app.rs  device.rs  mod.rs
src/registry/v1/data/app/: downstream.rs  kafka.rs  knative.rs  mod.rs  process.rs  publish.rs  test.rs
src/registry/v1/data/common/: mod.rs  mqtt.rs
src/registry/v1/data/common/labels/: mod.rs  parser.rs
src/registry/v1/data/device/: mod.rs  test.rs
src/tokens/: mod.rs
src/tokens/v1/: client.rs  data.rs
src/user/: mod.rs
src/user/v1/: client.rs  mod.rs
src/user/v1/data/: authn.rs  authz.rs  mod.rs  user.rs
src/util/: mod.rs
src/util/client/: mod.rs
