[package]
name = "drogue-client"
version = "0.7.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
description = "Clients for the Drogue IoT Cloud APIs"
repository = "https://github.com/drogue-iot/drogue-client"
homepage = "https://drogue.io"
categories = ["api-bindings"]
keywords = ["IoT", "API"]
readme = "README.md"

edition = "2018"

[dependencies]
log = "0.4"
thiserror = "1"

async-std = "1"
async-trait = "0.1"
futures = "0.3"

reqwest = { version = "0.11", optional = true }
openid = { version = "0.9.1", optional = true }
url = "2"

chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64-serde = "0.6"
base64 = "0.13"

[features]
default = ["reqwest", "openid"]

[dev-dependencies]
anyhow = "1"
maplit = "1"