[package]
name = "drogue-client"
version = "0.9.0-alpha.1"
authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
description = "Clients for the Drogue IoT Cloud APIs"
repository = "https://github.com/drogue-iot/drogue-client"
homepage = "https://drogue.io"
categories = ["api-bindings"]
keywords = ["IoT", "API"]
readme = "README.md"

edition = "2018"

[dependencies]

async-std = "1"
async-trait = "0.1"
base64 = "0.13"
base64-serde = "0.6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
url = "2"

http = { version = "0.2", optional = true }
openid = { version = "0.9.1", optional = true }
opentelemetry = { version = "0.17", optional = true }
opentelemetry-http = { version = "0.6", optional = true }
reqwest = { version = "0.11", optional = true }

[features]
default = ["reqwest", "openid", "telemetry"]
telemetry = ["opentelemetry", "opentelemetry-http", "http"]

[dev-dependencies]
anyhow = "1"
