[package]
name = "drogue-client"
version = "0.10.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
description = "Clients for the Drogue IoT Cloud APIs"
repository = "https://github.com/drogue-iot/drogue-client"
homepage = "https://drogue.io"
categories = ["api-bindings"]
keywords = ["IoT", "API"]
readme = "README.md"

edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
base64-serde = "0.6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
humantime-serde = "1"
indexmap = { version = "1", features = ["serde"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = "1"
tracing = "0.1"
url = "2"

http = { version = "0.2", optional = true }
http-serde = { version = "1.1.0", optional = true }
nom = { version = "6", optional = true }
openid = { version = "0.9.1", optional = true }
opentelemetry = { version = "0.17", optional = true }
opentelemetry-http = { version = "0.6", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
reqwest-wasm-ext = { git = "https://github.com/ctron/reqwest-wasm-ext.git", optional = true }

[features]
default = ["reqwest", "openid", "telemetry", "nom", "http-serde"]
telemetry = ["opentelemetry", "opentelemetry-http", "http"]
# alternate default target for wasm
wasm = ["reqwest", "reqwest-wasm-ext", "nom", "http-serde"]
reqwest = ["dep:reqwest", "reqwest-wasm-ext"]

[dev-dependencies]
anyhow = "1"
tokio = { version = "1.17.0", features = ["macros"] }
